tests/ui/contracts/async-fn-contract-ice-145333.stderr
error: contract annotations are not yet supported on async or gen functions
  --> $DIR/async-fn-contract-ice-145333.rs:6:1
   |
LL | #[core::contracts::ensures(|ret| *ret)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: the feature `contracts` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/async-fn-contract-ice-145333.rs:3:12
   |
LL | #![feature(contracts)]
   |            ^^^^^^^^^
   |
   = note: see issue #128044 <https://github.com/rust-lang/rust/issues/128044> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: aborting due to 1 previous error; 1 warning emitted

